atualização de links

--- a/about-us.html
+++ b/about-us.html
@@ -64,7 +64,7 @@
                   </ul>
                 </li>
                 <li id="menu-item-1308">
-                  <a href="contact.html" class="has-icon">TRABALHE CONOSCO</a>
+                  <a href="http://webliniaerp.com.br/alfasuportel/cadastro" class="has-icon">TRABALHE CONOSCO</a>
                 </li>              
               </ul>
             </div>
@@ -105,7 +105,7 @@
           </div>
         </div>
         <div class="small-12 large-6 columns">
-          <div class="wd-title-block"
+          <div class="wd-title-block">
             <h5>Porque escolher a Alfa Suportel</h5>
           </div>
           <p>A Suportel foi fundada em 1989, na época era apenas uma empresa que produzia trempe de fogão para reposição de peças, mas com o passar dos anos foi adquirindo experiência, credibilidade, maquinário para poder desenvolver novos produtos.
