--- a/blog.html
+++ b/blog.html
@@ -21,121 +21,57 @@
 
     <!-- Start Header -->
 
-    <header class="l-header creative-layout">
-      <div class="top-bar-container contain-to-grid sticky">
-        <nav class="top-bar" data-topbar="">
-          <ul class="title-area">
-            <li class="name">
-              <h1>
-                <a title="Flooring Company WordPress Theme" rel="home" href="index.html">
-                  <img alt="logo" src="images/logo-white.png">
-                </a>
-              </h1>
-            </li>
-            <li class="toggle-topbar menu-icon">
-              <a href="#"><span>Menu</span></a>
-            </li>
-          </ul>
-          <section class="creative top-bar-section right">
-            <div class="menu-main-menu-container">
-              <ul id="menu-main-menu" class="menu">
-                <li id="menu-item-1324">
-                  <a href="index.html" class="has-icon">Home</a>
-                </li>
-                <li id="menu-item-1295" class="has-dropdown not-click">
-                  <a href="#" class="has-icon">pages</a>
-                  <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">pages</a></li>
-                    <li id="menu-item-1309">
-                      <a href="about-us.html" class="has-icon">About Us</a>
-                    </li>
-                    <li id="menu-item-1313">
-                      <a href="services.html" class="has-icon">Services</a>
-                    </li>
-                  </ul>
-                </li>
-                <li id="menu-item-1299" class="has-dropdown not-click">
-                  <a href="#" class="has-icon">Portfolio</a>
-                  <ul class="sub-menu dropdown">
-                    <li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Portfolio</a></li>
-                    <li id="menu-item-1300" class="has-dropdown not-click">
-                      <a href="#" class="has-icon">Style I</a>
-                      <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Style I</a></li>
-                        <li id="menu-item-1317">
-                          <a href="portfolio-columns.html" class="has-icon">Portfolio columns</a>
-                        </li>
-                        <li id="menu-item-1316">
-                          <a href="portfolio-three-columns.html" class="has-icon">Portfolio three columns</a>
-                        </li>
-                        <li id="menu-item-1315">
-                          <a href="portfolio-two.html" class="has-icon">Portfolio Two Columns</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li id="menu-item-1301" class="has-dropdown not-click">
-                      <a href="#" class="has-icon">Style II</a>
-                      <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Style II</a></li>
-                        <li id="menu-item-1319">
-                          <a href="portfolio-style-ii-two-columns.html" class="has-icon">Portfolio Style II Two Columns</a>
-                        </li>
-                        <li id="menu-item-1320">
-                          <a href="portfolio-style-ii-three-columns.html" class="has-icon">Portfolio Style II Theree Columns</a>
-                        </li>
-                        <li id="menu-item-1321">
-                          <a href="portfolio-style-2-four-columns.html" class="has-icon">Portfolio Style II Four Columns</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li id="menu-item-1302" class="has-dropdown not-click">
-                      <a href="#" class="has-icon">Single portfolio</a>
-                      <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Single portfolio</a></li>
-                        <li id="menu-item-1303">
-                          <a href="single-portfolio.html" class="has-icon">Single Portfolio</a>
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-                <li id="menu-item-1298" class="has-dropdown not-click">
-                  <a href="#" class="has-icon">Blog</a>
-                  <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Blog</a></li>
-                    <li id="menu-item-1307">
-                      <a href="blog.html" class="has-icon">Classical Blog</a>
-                    </li>
-                    <li id="menu-item-1314">
-                      <a href="blog-columns.html" class="has-icon">Blog Columns</a>
-                    </li>
-                    <li id="menu-item-1297">
-                      <a href="single-blog.html" class="has-icon">Single Post</a>
-                    </li>
-                  </ul>
-                </li>
-                <li id="menu-item-1296" class="has-dropdown not-click">
-                  <a href="#" class="has-icon">Element</a>
-                  <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Element</a></li>
-                    <li id="menu-item-1312">
-                      <a href="call-to-action.html" class="has-icon">Call To Action</a>
-                    </li>
-                    <li id="menu-item-1311">
-                      <a href="pricing-tables.html" class="has-icon">Pricing Tables</a>
-                    </li>
-                    <li id="menu-item-1310">
-                      <a href="faq.html" class="has-icon">FAQ</a>
-                    </li>
-                    <li id="menu-item-1318">
-                      <a href="columns.html" class="has-icon">Columns</a>
-                    </li>
-                  </ul>
-                </li>
-                <li id="menu-item-1308">
-                <a href="contact.html" class="has-icon">Contact</a>
+  <header class="l-header creative-layout">
+    <div class="top-bar-container contain-to-grid sticky">
+      <nav class="top-bar" data-topbar="">
+        <ul class="title-area">
+          <li class="name">
+            <h1>
+              <a title="alfasuportel" rel="home" href="index.html" pa>
+                <img alt="logo" width="auto" height="auto" src="images/logo/logo alfa suportel .png">
+              </a>
+            </h1>
+          </li>
+          <li class="toggle-topbar menu-icon">
+            <a href="#"><span>Menu</span></a>
+          </li>
+        </ul>
+        <section class="creative top-bar-section right">
+          <div class="menu-main-menu-container">  
+            <ul id="menu-main-menu" class="menu">
+              <li id="menu-item-1299" class="has-dropdown not-click">
+                <a href="categorias.html" class="has-icon">LINHA DE PRODUTOS</a>
+                <ul class="sub-menu dropdown">
+                  <li id="menu-item-1300" class="has-dropdown not-click" ng-repeat="item in categorias">
+                    <a href="subcategoria.html?categoria={{ item.id }}" ng-mouseover="loadSubCategorias(item)" class="has-icon">{{ item.descricao_categoria }}</a>
+                    <ul class="sub-menu dropdown">
+                      <li id="menu-item-1316" ng-repeat="item in subcategorias">
+                        <a href="produtos.html?subcategoria={{ item.id }}" class="has-icon">{{ item.descricao_categoria }}</a>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
               </li>
-              </ul>
-            </div>
-          </section>
-        </nav>
-      </div>
-    </header>
-
+              <li id="menu-item-1295" class="has-dropdown not-click">
+                <a class="has-icon">PÁGINAS</a>
+                <ul class="sub-menu dropdown">
+                  <li id="menu-item-1309">
+                    <a href="about-us.html" class="has-icon">QUEM SOMOS</a>
+                  </li>
+                  <li id="menu-item-1308">
+                    <a href="contact.html" class="has-icon">CONTATO</a>
+                  </li>
+                </ul>
+              </li>
+              <li id="menu-item-1308">
+                <a href="http://webliniaerp.com.br/alfasuportel/cadastro" class="has-icon">TRABALHE CONOSCO</a>
+              </li>              
+            </ul>
+          </div>
+        </section>
+      </nav>
+    </div>
+  </header>
     <!-- End Header -->
 
     <!-- Start Title Bar -->
