--- a/faq.html
+++ b/faq.html
@@ -67,7 +67,7 @@
                 <a href="contact.html" class="has-icon">CONTATOS</a>
               </li> 
               <li id="menu-item-1308">
-                <a href="contact.html" class="has-icon">TRABALHE CONOSCO</a>
+                <a href="http://webliniaerp.com.br/alfasuportel/cadastro" class="has-icon">TRABALHE CONOSCO</a>
               </li>              
             </ul>
           </div>
