--- a/produtos.html
+++ b/produtos.html
@@ -65,7 +65,7 @@
                 </ul>
               </li>
               <li id="menu-item-1308">
-                <a href="contact.html" class="has-icon">TRABALHE CONOSCO</a>
+                <a href="http://webliniaerp.com.br/alfasuportel/cadastro" class="has-icon">TRABALHE CONOSCO</a>
               </li>              
             </ul>
           </div>
