--- a/about-us.html
+++ b/about-us.html
@@ -93,8 +93,8 @@
       <div class="row">
         <div class="small-12 large-6 large-offset-3 columns">
           <div class="wd-title-section_c">
-            <h2>Nos Somos AlfaSuportel</h2>
-            <h5>Nos Fazemos e vendemos produtos para trabalho e lazer</h5>
+            <h2>AlfaSuportel</h2>
+            <h5>Fazemos e vendemos produtos para trabalho e lazer</h5>
           </div>
         </div>
       </div>
