--- a/categorias.html
+++ b/categorias.html
@@ -83,7 +83,7 @@
     <section class="wd-title-bar">
       <div class="row">
         <div class="large-12 columns p-t-70 text-left">
-          <h2 id="page-title" class="title">LINHA DE PRODUTOS</h2>
+          <h2 id="page-title" class="title hvr-pop">LINHA DE PRODUTOS</h2>
         </div>
       </div>
     </section>
@@ -95,7 +95,7 @@
     <section class="portfolio-wrapper bg">
       <div class="row">
         <div class="small-12 large-8 large-offset-2 columns">
-          <div class="wd-title-section_c">
+          <div class="wd-title-section_c ">
             <h2>LINHAS DE PRODUTOS</h2>
           </div>
         </div>
@@ -105,7 +105,7 @@
           <div class="wd-section-project">
             <ul class="masque portfolio-grid small-block-grid-1	medium-block-grid-2 large-block-grid-2">
               <li ng-repeat="item in categorias">
-                <div class="wd-project hvr-underline-from-center">
+                <div class="wd-project hvr-underline-from-center hvr-pop">
                   <img width="380" height="254" src="http://webliniaerp.com.br/assets/imagens/produtos/{{ item.pth_thumbnail }}" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="">
                   <a href="subcategoria.html?categoria={{ item.id }}"><h4>{{ item.descricao_categoria }}</h4></a><br>
                 </div>
