--- a/subcategoria.html
+++ b/subcategoria.html
@@ -81,7 +81,7 @@
     <section class="banner-category" style="background: url('http://webliniaerp.com.br/assets/imagens/produtos/{{ categoria_pai.pth_banner }}') no-repeat center center;">
       <div class="row">
         <div class="large-12 columns p-t-70 text-left title-banner">
-          <h2 id="page-title" class="title">{{ categoria_pai.descricao_categoria }}</h2>
+          <h2 id="page-title" class="title hvr-pop">{{ categoria_pai.descricao_categoria }}</h2>
         </div>
       </div>
     </section>
@@ -103,7 +103,7 @@
           <div class="wd-section-project">
             <ul class="wd-section-portfolio small-block-grid-1 medium-block-grid-2 large-block-grid-3">
               <li ng-repeat="item in itens">
-                <div class="wd-project hvr-underline-from-center">
+                <div class="wd-project hvr-underline-from-center hvr-pop">
                   <img width="380" height="254" src="http://webliniaerp.com.br/assets/imagens/produtos/{{ item.pth_thumbnail }}" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="">
                   <a href="produtos.html?subcategoria={{ item.id }}"><h4>{{ item.descricao_categoria }}</h4></a><br>
                 </div>
