--- a/produtos.html
+++ b/produtos.html
@@ -81,7 +81,7 @@
 <section class="banner-category" style="background: url('http://webliniaerp.com.br/assets/imagens/produtos/{{ categoria_produto.pth_banner }}') no-repeat center center;">
   <div class="row">
     <div class="large-12 columns p-t-70 text-left title-banner-2">
-      <h2 id="page-title" class="title">{{ categoria_produto.descricao_categoria }}</h2>
+      <h2 id="page-title" class="title hvr-pop">{{ categoria_produto.descricao_categoria }}</h2>
     </div>
   </div>
 </section>
@@ -104,7 +104,7 @@
       <div class="wd-section-project">
         <ul class="slider masque portfolio-grid small-block-grid-1	medium-block-grid-2 large-block-grid-4">
           <li ng-repeat="item in itens">
-            <div class="wd-project hvr-underline-from-center">
+            <div class="wd-project hvr-underline-from-center hvr-pop">
               <img width="380" height="254" src="http://webliniaerp.com.br/assets/imagens/produtos/{{ item.img }}" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="">
               <a href="item_produtos.html?produto={{ item.id }}"><h4>{{ item.nome }}</h4></a>
             </div>
