melhorias nos banners

--- a/categorias.html
+++ b/categorias.html
@@ -106,7 +106,7 @@
             <ul class="masque portfolio-grid small-block-grid-1	medium-block-grid-2 large-block-grid-2">
               <li ng-repeat="item in categorias">
                 <div class="wd-project hvr-underline-from-center hvr-pop">
-                  <img width="380" height="254" src="http://webliniaerp.com.br/assets/imagens/produtos/{{ item.pth_thumbnail }}" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="">
+                  <img src="http://webliniaerp.com.br/{{ item.thumbnail }}" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="">
                   <a href="subcategoria.html?categoria={{ item.id }}"><h4>{{ item.descricao_categoria }}</h4></a><br>
                 </div>
               </li>
