--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 						<a href="subcategoria.html?categoria={{ categoria.id }}">
 							<div class="wd-text-icon-style5 animated fadeInUp text-center" data-animated="fadeInUp">
 								<div class="box-icon">
-									<img src="http://webliniaerp.com.br/assets/imagens/produtos/{{ categoria.pth_banner }}" alt="icon" width="1180" height="247">
+									<img src="http://webliniaerp.com.br/{{ categoria.banner }}" alt="icon" width="1180" height="247">
 								</div>
 								<div class="box-description">
 									<h3>
