--- a/produtos.html
+++ b/produtos.html
@@ -78,7 +78,7 @@
 
 <!-- Start Title Bar -->
 
-<section class="banner-category" style="background: url('http://webliniaerp.com.br/assets/imagens/produtos/{{ categoria_produto.pth_banner }}') no-repeat center center;">
+<section class="banner-category" style="background: url('http://webliniaerp.com.br/{{ categoria_produto.banner }}') no-repeat center center;">
   <div class="row">
     <div class="large-12 columns p-t-70 text-left title-banner-2">
       <h2 id="page-title" class="title hvr-pop">{{ categoria_produto.descricao_categoria }}</h2>
