--- a/about-us.html
+++ b/about-us.html
@@ -22,56 +22,57 @@
   <body ng-controller="aboutUsController">
     <!-- Start Header -->
     <header class="l-header creative-layout">
-      <div class="top-bar-container contain-to-grid sticky">
-        <nav class="top-bar" data-topbar="">
-          <ul class="title-area">
-            <li class="name">
-              <h1>
-                <a title="alfasuportel" rel="home" href="index.html" pa>
-                  <img alt="logo" width="auto" height="auto" src="images/logo/logo alfa suportel .png">
-                </a>
-              </h1>
-            </li>
-            <li class="toggle-topbar menu-icon">
-              <a href="#"><span>Menu</span></a>
-            </li>
-          </ul>
-          <section class="creative top-bar-section right">
-            <div class="menu-main-menu-container">  
-              <ul id="menu-main-menu" class="menu">
-                <li id="menu-item-1299" class="has-dropdown not-click">
-                  <a href="categorias.html" class="has-icon">LINHA DE PRODUTOS</a>
-                  <ul class="sub-menu dropdown">
-                    <li id="menu-item-1300" class="has-dropdown not-click" ng-repeat="item in categorias">
-                      <a href="subcategoria.html?categoria={{ item.id }}" ng-mouseover="loadSubCategorias(item)" class="has-icon">{{ item.descricao_categoria }}</a>
-                      <ul class="sub-menu dropdown">
-                        <li id="menu-item-1316" ng-repeat="item in subcategorias">
-                          <a href="produtos.html?subcategoria={{ item.id }}" class="has-icon">{{ item.descricao_categoria }}</a>
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-                <li id="menu-item-1295" class="has-dropdown not-click">
-                  <a class="has-icon">PÁGINAS</a>
-                  <ul class="sub-menu dropdown">
-                    <li id="menu-item-1309">
-                      <a href="about-us.html" class="has-icon">QUEM SOMOS</a>
-                    </li>
-                    <li id="menu-item-1308">
-                      <a href="contact.html" class="has-icon">CONTATO</a>
-                    </li>
-                  </ul>
-                </li>
-                <li id="menu-item-1308">
-                  <a href="http://webliniaerp.com.br/alfasuportel/cadastro" class="has-icon">TRABALHE CONOSCO</a>
-                </li>              
-              </ul>
-            </div>
-          </section>
-        </nav>
-      </div>
-    </header>
+    <div class="top-bar-container contain-to-grid sticky">
+      <nav class="top-bar" data-topbar="">
+        <ul class="title-area">
+          <li class="name">
+            <h1>
+              <a title="alfasuportel" rel="home" href="index.html" pa>
+                <img alt="logo" width="auto" height="auto" src="images/logo/logo alfa suportel .png">
+              </a>
+            </h1>
+          </li>
+          <li class="toggle-topbar menu-icon">
+            <a href="#"><span>Menu</span></a>
+          </li>
+        </ul>
+        <section class="creative top-bar-section right">
+          <div class="menu-main-menu-container">  
+            <ul id="menu-main-menu" class="menu">
+              <li id="menu-item-1299" class="has-dropdown not-click">
+                <a href="categorias.html" class="has-icon">LINHA DE PRODUTOS</a>
+                <ul class="sub-menu dropdown">
+                  <li id="menu-item-1300" class="has-dropdown not-click" ng-repeat="item in categorias">
+                    <a href="subcategoria.html?categoria={{ item.id }}" ng-mouseover="loadSubCategorias(item)" class="has-icon">{{ item.descricao_categoria }}</a>
+                    <ul class="sub-menu dropdown">
+                      <li id="menu-item-1316" ng-repeat="item in subcategorias">
+                        <a class="has-icon" ng-show="(item.filhos == null)" href="produtos.html?subcategoria={{ item.id }}">{{ item.descricao_categoria }}</a>
+                        <a class="has-icon" ng-show="(item.filhos != null)" href="subcategoria.html?categoria={{ item.id }}">{{ item.descricao_categoria }}</a>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+              <li id="menu-item-1295" class="has-dropdown not-click">
+                <a class="has-icon">PÁGINAS</a>
+                <ul class="sub-menu dropdown">
+                  <li id="menu-item-1309">
+                    <a href="about-us.html" class="has-icon">QUEM SOMOS</a>
+                  </li>
+                  <li id="menu-item-1308">
+                    <a href="contact.html" class="has-icon">CONTATO</a>
+                  </li>
+                </ul>
+              </li>
+              <li id="menu-item-1308">
+                <a href="http://webliniaerp.com.br/alfasuportel/cadastro" class="has-icon">TRABALHE CONOSCO</a>
+              </li>              
+            </ul>
+          </div>
+        </section>
+      </nav>
+    </div>
+  </header>
 
     <!-- End Header -->
 
