--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 										<a href="subcategoria.html?categoria={{ item.id }}" ng-mouseover="loadSubCategorias(item)" class="has-icon">{{ item.descricao_categoria }}</a>
 										<ul class="sub-menu dropdown">
 											<li id="menu-item-1316" ng-repeat="item in subcategorias">
-												<a href="produtos.html?subcategoria={{ item.id }}" class="has-icon">{{ item.descricao_categoria }}</a>
+												<a class="has-icon" ng-show="(item.filhos == null)" href="produtos.html?subcategoria={{ item.id }}">{{ item.descricao_categoria }}</a>
+                  								<a class="has-icon" ng-show="(item.filhos != null)" href="subcategoria.html?categoria={{ item.id }}">{{ item.descricao_categoria }}</a>
 											</li>
 										</ul>
 									</li>
@@ -161,7 +162,7 @@
 						</a>
 						<div class="wd-text-icon-style5 animated fadeInUp" data-animated="fadeInUp">
 							<ul class="slider masque portfolio-grid small-block-grid-1	medium-block-grid-2 large-block-grid-4">
-								<li ng-repeat="produto in categoria.itens">
+								<li ng-repeat="produto in categoria.itens | limitTo: 4">
 									<div class="wd-project hvr-underline-from-center">
 										<img width="380" height="254" src="http://webliniaerp.com.br/assets/imagens/produtos/{{ produto.img }}" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image hvr-pop" alt="">
 										<a href="item_produtos.html?produto={{ produto.id }}"><h4 class="hvr-pop">{{ produto.nome }}</h4></a>
