--- a/item_produtos.html
+++ b/item_produtos.html
@@ -48,7 +48,8 @@
                     <a href="subcategoria.html?categoria={{ item.id }}" ng-mouseover="loadSubCategorias(item)" class="has-icon">{{ item.descricao_categoria }}</a>
                     <ul class="sub-menu dropdown">
                       <li id="menu-item-1316" ng-repeat="item in subcategorias">
-                        <a href="produtos.html?subcategoria={{ item.id }}" class="has-icon">{{ item.descricao_categoria }}</a>
+                        <a class="has-icon" ng-show="(item.filhos == null)" href="produtos.html?subcategoria={{ item.id }}">{{ item.descricao_categoria }}</a>
+                        <a class="has-icon" ng-show="(item.filhos != null)" href="subcategoria.html?categoria={{ item.id }}">{{ item.descricao_categoria }}</a>
                       </li>
                     </ul>
                   </li>
