--- a/item_produtos.html
+++ b/item_produtos.html
@@ -89,10 +89,10 @@
 
   <!-- Start Title Bar -->
 
-  <section class="wd-title-bar">
+  <section class="banner-category" style="background: url('http://webliniaerp.com.br/{{ categoria_produto.banner }}') no-repeat center center;">
     <div class="row">
-      <div class="large-12 columns p-t-70 text-left">
-        <h2 id="page-title" class="title title-product">{{ produto.nome }}</h2>
+      <div class="large-12 columns p-t-70 text-left title-banner-2">
+        <h2 id="page-title" class="title hvr-pop">{{ produto.nome }}</h2>
       </div>
     </div>
   </section>
