--- a/linhasdeprodutos.html
+++ b/linhasdeprodutos.html
@@ -23,77 +23,51 @@
 
     <!-- Start Header -->
 
-    <header class="l-header creative-layout">
-      <div class="top-bar-container contain-to-grid sticky">
-        <nav class="top-bar" data-topbar="">
-          <ul class="title-area">
-            <li class="name">
-              <h1>
-                <a title="alfasuportel" rel="home" href="index.html" pa>
-                  <img alt="logo" width="auto" height="auto" src="images/logo/logo alfa suportel .png">
-                </a>
-              </h1>
-            </li>
-            <li class="toggle-topbar menu-icon">
-              <a href="#"><span>Menu</span></a>
-            </li>
-          </ul>
-          <section class="creative top-bar-section right">
-            <div class="menu-main-menu-container">  
-              <ul id="menu-main-menu" class="menu">
-                <li id="menu-item-1299" class="has-dropdown not-click">
-                  <a href="linhasdeprodutos.html" class="has-icon">LINHA DE PRODUTOS</a>
-                  <ul class="sub-menu dropdown">
-                    <li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">Catalogo</a></li>
-                    <li id="menu-item-1300" class="has-dropdown not-click">
-                      <a href="subcategoria.html" class="has-icon">ALFASUPORTEL</a>
-                      <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo I</a></li>
-                        <li id="menu-item-1316">
-                          <a href="categoria.html" class="has-icon">CATEGORIAS</a>
-                        </li>
-                        <li id="menu-item-1316">
-                          <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5>
-                          </li>                    
-                          <a href="categoria.html" class="has-icon">CATEGORIAS</a>
-                        </ul>
-                      </li>
-                    </ul>
-                  </li>
-                  <li id="menu-item-1301" class="has-dropdown not-click">
-                    <a href="subcategoria.html" class="has-icon">FULCAN</a>
+  <header class="l-header creative-layout">
+    <div class="top-bar-container contain-to-grid sticky fixed">
+      <nav class="top-bar" data-topbar="">
+        <ul class="title-area">
+          <li class="name">
+            <h1>
+              <a title="alfasuportel" rel="home" href="index.html" pa>
+                <img alt="logo" width="auto" height="auto" src="images/logo/logo alfa suportel .png">
+              </a>
+            </h1>
+          </li>
+          <li class="toggle-topbar menu-icon">
+            <a href="#"><span>Menu</span></a>
+          </li>
+        </ul>
+        <section class="creative top-bar-section left">
+          <div class="menu-main-menu-container">  
+            <ul id="menu-main-menu" class="menu">
+              <li id="menu-item-1299" class="has-dropdown not-click">
+                <a href="categorias.html" class="has-icon">LINHA DE PRODUTOS</a>
+                <ul class="sub-menu dropdown">
+                  <li id="menu-item-1300" class="has-dropdown not-click" ng-repeat="item in categorias">
+                    <a href="subcategoria.html?categoria={{ item.id }}" ng-mouseover="loadSubCategorias(item)" class="has-icon">{{ item.descricao_categoria }}</a>
                     <ul class="sub-menu dropdown">
-                      <li class="title back js-generated">
-                        <h5>
-                          <a href="javascript:void(0)">Back</a>
-                        </h5>
-                      </li>
-                      <li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">Estilo II</a></li>
-                      <li id="menu-item-1319">
-                        <a href="categoria.html" class="" ass="has-icon">CATEGORIAS</a>
+                      <li id="menu-item-1316" ng-repeat="item in subcategorias">
+                        <a class="has-icon" ng-show="(item.filhos == null)" href="produtos.html?subcategoria={{ item.id }}">{{ item.descricao_categoria }}</a>
+                                  <a class="has-icon" ng-show="(item.filhos != null)" href="subcategoria.html?categoria={{ item.id }}">{{ item.descricao_categoria }}</a>
                       </li>
                     </ul>
                   </li>
-
                 </ul>
               </li>
-              <li id="menu-item-1295" class="has-dropdown not-click">
-                <a href="catalogo.html" class="has-icon">PAGINAS</a>
-                <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">PAGINAS</a></li>
-                  <li id="menu-item-1309">
-                    <a href="about-us.html" class="has-icon">QUEM SOMOS</a>
-                  </li>
-                  <li id="menu-item-1308">
-                    <a href="contact.html" class="has-icon">CONTATOS</a>
-                  </li>
-                </ul>
-
+            </ul>
+          </div>
+          <div class="creative top-bar-section hight">
+            <ul class="menu-main-menu">
+              <li >
+                <a href="about-us.html" class="has-icon">QUEM SOMOS</a>
               </li>
               <li id="menu-item-1308">
-                <a href="contact.html" class="has-icon">CONTATOS</a>
+                <a href="contact.html" class="has-icon">CONTATO</a>
               </li>
               <li id="menu-item-1308">
                 <a href="http://webliniaerp.com.br/alfasuportel/cadastro" class="has-icon">TRABALHE CONOSCO</a>
-              </li>              
+              </li>
             </ul>
           </div>
         </section>
